// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly 1`] = `
<DocumentFragment>
  <div
    class="c-avatar u-super"
    data-name="avatar"
  >
    <img
      alt="placeholder"
      class="o-image c-avatar__img"
      data-name="image"
      src="http://placehold.it/1024x963/3B6DC6/FFF"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with initials 1`] = `
<DocumentFragment>
  <div
    class="c-avatar u-null"
    data-name="avatar"
    data-text="LKO"
  />
</DocumentFragment>
`;

exports[`Avatar renders correctly with two images 1`] = `
<DocumentFragment>
  <div
    class="c-avatar u-super"
    data-name="avatar"
  >
    <img
      alt="placeholder"
      class="o-image c-avatar__img"
      data-name="image"
      src="http://placehold.it/1024x963/3B6DC6/FFF"
    />
    <img
      alt="placeholder"
      class="o-image c-avatar__img"
      data-name="image"
      src="http://placehold.it/1024x963/BADA55/FFF"
    />
  </div>
</DocumentFragment>
`;
